--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@types/styled-components": "^5.1.25",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "promise": "^8.1.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
+    "react-stepzilla": "^7.0.0",
     "styled-components": "^5"
   },
   "devDependencies": {
