--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.1",
+    "@mui/material": "^5.6.4",
     "@types/styled-components": "^5.1.25",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "formik": "^2.2.9",
+    "formik-material-ui": "^4.0.0-alpha.2",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
     "promise": "^8.1.0",
@@ -19,7 +23,8 @@
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
     "react-stepzilla": "^7.0.0",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
