--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.7.0",
     "@auth0/auth0-react": "^1.10.1",
-    "@mui/material": "^5.6.4",
-    "@types/styled-components": "^5.1.25",
-    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
@@ -20,17 +21,14 @@
     "next": "12.1.5",
     "promise": "^8.1.0",
     "react": "18.1.0",
-    "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
     "react-stepzilla": "^7.0.0",
-    "styled-components": "^5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
